; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/ipv6/map/src/extr_mapcalc.c_bmemcpys64.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/ipv6/map/src/extr_mapcalc.c_bmemcpys64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64, i64)* @bmemcpys64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bmemcpys64(i8* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %9, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %10, align 8
  %15 = load i64, i64* %7, align 8
  %16 = udiv i64 %15, 8
  store i64 %16, i64* %11, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = add i64 %17, %18
  %20 = udiv i64 %19, 8
  store i64 %20, i64* %12, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = load i64, i64* %11, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = load i64, i64* %12, align 8
  %25 = load i64, i64* %11, align 8
  %26 = sub i64 %24, %25
  %27 = add i64 %26, 1
  %28 = call i32 @memcpy(i32* %9, i32* %23, i64 %27)
  %29 = load i32, i32* %9, align 4
  %30 = call i64 @be64_to_cpu(i32 %29)
  %31 = load i64, i64* %7, align 8
  %32 = urem i64 %31, 8
  %33 = shl i64 %30, %32
  %34 = call i32 @cpu_to_be64(i64 %33)
  store i32 %34, i32* %9, align 4
  %35 = load i8*, i8** %5, align 8
  %36 = load i64, i64* %8, align 8
  %37 = call i32 @bmemcpy(i8* %35, i32* %9, i64 %36)
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i64) #1

declare dso_local i32 @cpu_to_be64(i64) #1

declare dso_local i64 @be64_to_cpu(i32) #1

declare dso_local i32 @bmemcpy(i8*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
